--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.junemon.travelroutine">
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <application
+        android:name=".MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".MainApplication"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -17,10 +18,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".feature.input.InputActivity" />
-        <activity android:name=".feature.input.InputDetail"/>
+        <activity android:name="com.example.junemon.travelroutine.feature.items.input.InputActivity" />
+        <activity android:name="com.example.junemon.travelroutine.feature.items.input.InputDetail" />
+        <activity android:name=".feature.routine.input.InputRoutineActivity" />
+        <activity android:name=".feature.routine.input.InputRoutineDetail" />
 
-        <receiver android:name=".helper.alarmHours.AlarmReceiver"
+        <receiver
+            android:name=".helper.alarmHours.AlarmReceiver"
             android:enabled="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"></action>
