--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,8 @@ dependencies {
 //    implementation 'android.arch.lifecycle:reactivestreams:1.1.1'
     annotationProcessor 'android.arch.lifecycle:compiler:1.1.1'
     //jobdispatcher
-    implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
+//    implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
+    //anko
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation "org.jetbrains.anko:anko-design:$anko_version"
     //image downloader
@@ -66,6 +67,6 @@ dependencies {
     //custom chrome tab
     implementation 'com.android.support:customtabs:27.1.1'
     //places
-    implementation 'com.google.android.gms:play-services-places:15.0.1'
-    implementation 'com.google.android.gms:play-services-location:15.0.1'
+//    implementation 'com.google.android.gms:play-services-places:15.0.1'
+//    implementation 'com.google.android.gms:play-services-location:15.0.1'
 }
