--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.junemon.travelroutine">
-    
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
@@ -19,7 +20,8 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDdTEiRbvcX3_83ZpZhmqY1f0fI7gZ47kI" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,11 +29,15 @@
             </intent-filter>
         </activity>
         <activity android:name="com.example.junemon.travelroutine.feature.items.input.InputActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"/>
-        <activity android:name="com.example.junemon.travelroutine.feature.items.input.InputDetail" />
+        <activity android:name="com.example.junemon.travelroutine.feature.items.input.InputDetail"
+            android:screenOrientation="portrait"/>
         <activity android:name=".feature.routine.input.InputRoutineActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"/>
-        <activity android:name=".feature.routine.input.InputRoutineDetail" />
+        <activity android:name=".feature.routine.input.InputRoutineDetail"
+            android:screenOrientation="portrait"/>
 
         <receiver
             android:name=".helper.alarms.AlarmReceiver"
