--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:name=".MainApplication"
         android:allowBackup="true"
@@ -20,24 +20,30 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDdTEiRbvcX3_83ZpZhmqY1f0fI7gZ47kI" />
 
-        <activity android:name=".MainActivity"
-            android:screenOrientation="portrait">
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.junemon.travelroutine.feature.items.input.InputActivity"
+        <activity
+            android:name="com.example.junemon.travelroutine.feature.items.input.InputActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"/>
-        <activity android:name="com.example.junemon.travelroutine.feature.items.input.InputDetail"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".feature.routine.input.InputRoutineActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name="com.example.junemon.travelroutine.feature.items.input.InputDetail"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".feature.routine.input.InputRoutineActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"/>
-        <activity android:name=".feature.routine.input.InputRoutineDetail"
-            android:screenOrientation="portrait"/>
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".feature.routine.input.InputRoutineDetail"
+            android:screenOrientation="portrait" />
 
         <receiver
             android:name=".helper.alarms.AlarmReceiver"
