--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.junemon.travelroutine"
-        minSdkVersion 23
+        minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -67,7 +67,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
     //custom chrome tab
     implementation 'com.android.support:customtabs:28.0.0'
-
+    implementation 'com.maltaisn:icondialog:2.0.2'
     //places
 //    implementation 'com.google.android.gms:play-services-places:15.0.1'
 //    implementation 'com.google.android.gms:play-services-location:15.0.1'
